# deep-reinforcement-learning-implementations

./: .gitignore  Cargo.toml  README.md
algorithms/: Cargo.toml
algorithms/src/: dqn_on_line_world.rs  main.rs
algorithms/src/models/GridWorld/: reinforce_lb_max_it_1000.pt  reinforce_lb_max_it_10000.pt  reinforce_lb_max_it_100000.pt  reinforce_lb_max_it_1000000.pt  reinforce_lb_max_it_2000000.pt  reinforce_max_iter_1000.pt  reinforce_max_iter_10000.pt  reinforce_max_iter_100000.pt  reinforce_max_iter_1000000.pt
algorithms/src/models/LineWorld/: 1reinforce_lb_max_iter_10000_g_0.99_alpha_pi_0.01_alpha_v_0.01.pt  ddqn_er_max_iter_5000_g_0.99_alpha_0.1.ot  ddqn_max_iter_10000_g_0.99_alpha_0.1.ot  ddqn_per_max_iter_10000_g_0.99_alpha_0.1.ot  dqn_max_iter_10000_g_0.99_alpha_0.1.ot  reinforce_lb_max_it_1000.pt  reinforce_lb_max_it_10000.pt  reinforce_lb_max_it_100000.pt  reinforce_lb_max_it_1000000.pt  reinforce_lb_max_it_2000000.pt  reinforce_lb_max_iter_10000_g_0.99_alpha_pi_0.01_alpha_v_0.01.pt  reinforce_max_iter_1000.pt  reinforce_max_iter_10000.pt  reinforce_max_iter_100000.pt
algorithms/src/to_do/: ddqn.rs  ddqn_chatgpt.rs  dqn.rs  functions.rs  mcrr.rs  mcts.rs  mod.rs  ppo_a2c.rs  reinforce.rs  reinforce_learned_baseline.rs  reinforce_with_mean_baseline.rs  replay_buffer.rs
algorithms/src/utils/: mod.rs  per.rs  score.rs
environnements/: Cargo.toml
environnements/src/: contracts.rs  deep_single_agent.rs  lib.rs
environnements/src/to_do/: deep_single_agent.rs  mcrr_single_agent.rs  mcts_single_agent.rs  mod.rs  single_agent.rs
src/: main.rs
