[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environnements = {path="../environnements"}
tch = "0.9.0"
pbr = "1.0.4"
rand = "0.8.4"
plotlib = "0.5.1"
random_choice = "0.3.2"